[package]
name = "thoo_readext"
version = "1.0.0"
edition = "2021"
description = "Some extension methods for ByteOrder."
readme = "README.md"
repository = "https://github.com/thoo0224/readext_rs"
license = "MIT"
keywords = ["thoo_readext"]
authors = ["Thomas Platschorre"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3" }